# fiji-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  comparison.md  fiji-health.sh  launch-fiji-bridge.sh  launch-fiji.sh  pyproject.toml
.claude/: settings.json
.claude/agent-memory/fiji-processing/: MEMORY.md  feedback_lut_thresholding.md  reference_blobs_watershed.md  reference_roi_overlay_no_labels.md
.claude/agents/: fiji-processing.md
.tickets/: fm-0etp.md  fm-1tyy.md  fm-3qpc.md  fm-4dc6.md  fm-4yxu.md  fm-50jy.md  fm-5cch.md  fm-5pcx.md  fm-61gs.md  fm-749h.md  fm-78xw.md  fm-7lg7.md  fm-9a04.md  fm-9cbk.md  fm-b76p.md  fm-b7pp.md  fm-bpjo.md  fm-e6fk.md  fm-h4g5.md  fm-hjam.md  fm-iceo.md  fm-ir50.md  fm-kfhn.md  fm-kflp.md  fm-ma8h.md  fm-meeg.md  fm-ot4g.md  fm-s0lj.md  fm-uj00.md  fm-unzt.md  fm-viai.md  fm-y2ax.md  fm-yfob.md  fp-89zk.md
evals/: run_eval.md
evals/nucleus-seg/: check.py  prompt.md
evals/nucleus-seg/fixtures/: generate_nuclei.py
examples/: README.md
examples/test-env/: CLAUDE.md
fiji-plugin/: dependency-reduced-pom.xml  pom.xml
fiji-plugin/src/main/java/com/fiji/mcp/bridge/: AwtDialogProbe.java  BridgeAutoStart.java  BridgeBootstrap.java  BridgeExceptionHandler.java  BridgePlugin.java  BridgeWebSocketServer.java  DialogDismissedException.java  DialogProbe.java  DialogWatchdog.java  DismissedDialog.java  EventEmitter.java  ExecutionLock.java  ExecutionReporter.java  ImageService.java  RequestHandler.java  (+3 more)
src/fiji_mcp/: __init__.py  action_log.py  cli.py  fiji_client.py  fiji_home.py  install.py  server.py  trace_logger.py
tests/: conftest.py  test_fiji_client.py  test_tools_forwarded.py
tests/evals/: run_eval.md
tests/evals-internal/: README.md
tests/evals-internal/nucleus-seg/: ground_truth.ijm
tests/evals/nucleus-seg/: check.py
tests/evals/nucleus-seg/fixtures/: nuclei.tif
tests/examples/: README.md
tests/examples/test-env/: .mcp.json
tests/unit/: smoke_test.py  test_action_log.py  test_tools_forwarded.py  test_tools_local.py
(+6 files in other folders)
