[project]
name = "fiji-mcp"
version = "0.1.0"
description = "MCP server bridging LLM agents with Fiji via WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
fiji-mcp = "fiji_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fiji_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
