[project]
name = "fiji-mcp"
version = "0.1.0"
description = "MCP server bridging LLM agents with Fiji via WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
fiji-mcp = "fiji_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fiji_mcp"]
artifacts = ["src/fiji_mcp/data/*.jar"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "tifffile>=2026.3.3",
]
